--- a/src/component/fab/fab.css
+++ b/src/component/fab/fab.css
@@ -2,7 +2,7 @@
   border-radius: 50%;
   width: 30px;
   height: 30px;
-  position: absolute;
+  /* position: absolute; */
   right: 10px;
   bottom: 10px;
   background-color: #5399ff;
@@ -12,6 +12,7 @@
   align-items: center;
   cursor: pointer;
   border: solid 1px #0049b2;
+  margin-left: 10px;
 }
 
 .fab:hover {
